# crypto_trader-

crypto_mvp/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ACTUAL_FIX_FINAL.md  ACTUAL_ROOT_CAUSE.md  AFTER_COSTS_EDGE_GATE_IMPLEMENTATION.md  AGGRESSIVE_CONFIG_CHANGES.md  ALL_BUGS_FIXED.md  ALL_ERRORS_FIXED.md  ALL_FIXES_COMPLETED.md  ANALYSIS_AND_IMPROVEMENTS.md  BRACKET_SYSTEM_IMPLEMENTATION.md  BUG_AND_FIX.md  BULLETPROOF_FIX.txt  CHANGESET_SUMMARY.md  CLEAN_START.sh  COMMAND_CHEAT_SHEET.md  COMPLETE_FIX_SUMMARY.md  DATA_RESILIENCE_IMPLEMENTATION.md  DECISION_ENGINE_GUARD_IMPLEMENTATION.md  DIAGNOSTIC_SUMMARY.md  Dockerfile  EDGE_GUARD_IMPLEMENTATION.md  ENHANCED_LOGGING_IMPLEMENTATION.md  EQUITY_FEE_SNAPSHOT_IMPLEMENTATION.md  EQUITY_FIX_FINAL.md  EXECUTION_ROUTER_IMPLEMENTATION.md  FEE_SLIPPAGE_IMPLEMENTATION.md  FINAL_FIX_SUMMARY.md  FINAL_FIX_VALIDATION.md  FINAL_INSTRUCTIONS.txt  FINAL_SOLUTION.txt  FIXES_APPLIED.md  FIXES_APPLIED_FINAL.md  HIGH_IMPACT_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_REAL_TRADING.md  IMPROVEMENTS_READY_TO_PUSH.md  (+55 more)
crypto_mvp/.github/workflows/: ci.yml
crypto_mvp/config/: fees.yaml  profit_optimized.yaml
crypto_mvp/docs/: ORDER_PRECISION.md  PORTFOLIO_TRANSACTIONS.md
crypto_mvp/examples/: order_precision_example.py  portfolio_transaction_example.py
crypto_mvp/execution/: __init__.py  brackets.py  engine.py
crypto_mvp/features/: indicators.py
crypto_mvp/live/: preflight.py  profit_realization.py
crypto_mvp/market/: __init__.py  prices.py
crypto_mvp/portfolio/: __init__.py  ledger.py  snapshot.py
crypto_mvp/risk/: __init__.py  exits.py  position_sizer.py  position_sizing.py  sltp.py
crypto_mvp/src/crypto_mvp/: __init__.py  __main__.py  lot_book.py  main.py  serve.py  trading_system.py  trading_system_fixed.py  ui_panels.py
crypto_mvp/src/crypto_mvp/analytics/: __init__.py  pnl_logger.py  profit_analytics.py  profit_logger.py  trade_ledger.py
crypto_mvp/src/crypto_mvp/backtest/: __init__.py  engine.py  report.py
crypto_mvp/src/crypto_mvp/cli/: __init__.py  app.py
crypto_mvp/src/crypto_mvp/connectors/: __init__.py  base_connector.py  coinbase_connector.py
crypto_mvp/src/crypto_mvp/core/: __init__.py  config_manager.py  config_schema.py  decimal_money.py  logging_utils.py  money.py  nav_validation.py  pricing_snapshot.py  utils.py  utils.py.backup
crypto_mvp/src/crypto_mvp/execution/: __init__.py  bracket_attacher.py  decision_engine_guard.py  edge_guard.py  execution_router.py  exit_manager.py  fee_slippage.py  market_data_filter.py  multi_strategy.py  oco_manager.py  order_builder.py  order_manager.py  portfolio_sweeper.py  post_only_router.py  pyramiding.py  regime_detector.py  risk_sizing_calculator.py  sl_cooldown_tracker.py  symbol_filter.py  trade_metrics.py
crypto_mvp/src/crypto_mvp/execution/executors/: __init__.py  arbitrage.py  base.py  (+9 more)
crypto_mvp/src/crypto_mvp/indicators/: __init__.py  advanced.py  atr_service.py  indicators.py  technical_calculator.py
crypto_mvp/src/crypto_mvp/metrics/: __init__.py  collector.py
crypto_mvp/src/crypto_mvp/risk/: __init__.py  portfolio.py  portfolio_transaction.py  portfolio_validator.py  risk_manager.py  stop_models.py
crypto_mvp/src/crypto_mvp/state/: __init__.py  store.py
crypto_mvp/src/crypto_mvp/strategies/: __init__.py  arbitrage.py  base.py  breakout.py  composite.py  correlation.py  mean_reversion.py  momentum.py  news_driven.py  on_chain.py  sentiment.py  volatility.py  whale_tracking.py
crypto_mvp/tests/: __init__.py  run_comprehensive_tests.py  test_advanced_indicators.py  test_api_error_handling.py  test_atomic_position_hydration.py  test_atomic_position_hydration_simple.py  test_bracket_exit_integrity.py  test_cycle_price_cache.py  test_daily_summary_decimal.py  test_decimal_integration.py  test_decimal_integrity.py  test_decimal_money.py  test_decision_trace.py  test_decision_trace_entry_price.py  test_equity_calculation.py  test_equity_calculations.py  test_equity_reconciliation.py  test_execution_flow.py  test_exploration_limits.py  test_fee_integration.py  test_fee_schedule.py  test_lotbook_persistence.py  test_nav_validation.py  test_order_precision.py  test_order_types.py  test_paper_trading.py  test_portfolio_transaction.py  test_position_sync.py  test_pricing_context.py  test_pricing_snapshot.py  test_profit_realization_flag.py  test_real_indicators.py  test_risk_management.py  test_risk_sl_tp_rr.py  test_session_validation.py  test_sizing.py  test_smoke.py  test_snapshot_consistency.py  test_symbol_whitelist.py  test_trading_capability.py  (+1 more)
(+1 files in other folders)
